name:                todo-recorder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CryogenicBot/TodoRecorder#readme
license:             BSD3
license-file:        LICENSE
author:              Vikram Sharma
maintainer:          vikram.sharma.vik@gmail.com
copyright:           2018 Vikram Sharma
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , UsersRoute
                     , DatabaseOps
                     , Models
                     , Configuration
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , mtl == 2.2.2
                     , postgresql-simple == 0.5.4.0
                     , text == 1.2.3.0
                     , bytestring == 0.10.8.2
                     , resource-pool == 0.2.3.2
  default-language:    Haskell2010

executable todo-recorder-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson == 1.2.4.0
                     , bytestring == 0.10.8.2
                     , mtl == 2.2.2
                     , todo-recorder
  default-language:    Haskell2010

test-suite todo-recorder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , todo-recorder-exe
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CryogenicBot/TodoRecorder
